2005-03-20  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/stmt.c, lib/oci8.rb.in, test/test_oci8.rb:
	  bind a ref cursor as an OCI8::Cursor.

2005-01-16  KUBO Takehiro  <kubo@jiubao.org>

	* lib/oci8.rb.in: change default bindtype for NUMBER with
	  unspecified scale.
	  (This problem is reported by William Lawson, Dmitry Maksyoma and Andreas Habel)
	* lib/oci8.rb.in: add OCI8::Cursor.select_number_as=
	  (for someone who want old bindtype)
	* lib/oci8.rb.in: add OCI8::Cursor#fetch_hash
	  (contributed by Jason Sweat)
	* ext/oci8/oci8.h, ext/oci8/stmt.c: don't raise an error when OCI_SUCCESS_WITH_INFO.
	  (suggested by Kenji Nishishiro)
	* ext/ooi8/oraconf.rb: support Oracle Instant Installer.
	  (suggested by Eustaquio Rangel de Oliveira Jr.)
	* Makefile, ext/oci8/extconf.rb: change version to 0.1.9

2004-10-30  KUBO Takehiro  <kubo@jiubao.org>

	* pre-distclean.rb: delete a temporary file made by ext/oci8/oraconf.rb.
	* ext/oci8/oraconf.rb: 1. change object files to an archive file
	  to work around on Oracle 8.1.7. 2. raise error when OCI.H can't
	  be found on Windows.

2004-06-21  KUBO Takehiro  <kubo@jiubao.org>

	* Makefile, ext/oci8/extconf.rb: change version to 0.1.8-pre1
	* lib/DBD/OCI8/OCI8.rb: add DBI::DatabaseHandle#tables. add DBI::StatementHandle#func(:bind_value, ...).

2004-03-07  KUBO Takehiro  <kubo@jiubao.org>

	* ext/oci8/extconf.rb: fix to use setup.rb.
	* ext/oci8/oraconf.rb: add support Borland C++ Builder.
	* lib/oci8.rb.in: support OCI8::CLOB.
	* test/config.rb: CLOB test file depends on NLS_LANG.
	* test/test_oci8.rb: fix a test method.
	* test/test_break.rb: break time depends on OS?...
	* test/test_dbi_clob.rb: add a new file to test CLOB via DBI.

2003-09-20  KUBO Takehiro  <kubo@jiubao.org>

	* src/handle.c: fix bug of OCI8::BLOB at running GC.
	* src/stmt.c: accept Bignum as (({type})) of OCI8::Cursor#define.
	* src/lib/oci8.rb.in: accept OCI8::BLOB as (({type})) of OCI8::Cursor#define.